--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello, World!
+<!DOCTYPE html>
+   <head>
+      <title></title>
+   </head>
+   <body>
+      <div style="width: 100%; display: flex;">
+         <canvas></canvas>
+         <textarea id="myTextArea" style="width: 100%; height: 100hv;"></textarea>
+      </div>
+
+      <script src="index.js"></script>
+   </body>
+</html>
