--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-   <head>
-      <title></title>
-   </head>
-   <body>
-      <div style="width: 100%; display: flex;">
-         <canvas></canvas>
-         <textarea id="myTextArea" style="width: 100%; height: 100hv;"></textarea>
+<html lang="en">
+  <head>
+    <title>Ziji Huang</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="index.css">
+  </head>
+  <body>
+    <header class="site-header" role="banner">
+      <div class="wrapper">
+        <a class="site-title" rel="author" href="/blog/">blog</a>
+        <nav class="site-nav">
+          <div>
+            <a class="page-link" href="/about/">About</a>
+            <a class="page-link" href="/projects/">Projects</a>
+          </div>
+        </nav>
       </div>
-
-      <script src="index.js"></script>
-   </body>
+    </header>
+  </body>
 </html>
