--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="https://huangziji.github.io/css/bootstrap.min.css" />
 
   
-  <title>Categories | Zijis Blog</title>
+  <title>About | Zijis Blog</title>
   
 
   <style>
@@ -142,8 +142,8 @@ a:focus {
   
   <div class="container">
     <article>
-      <h1>Categories</h1>
-
+      <h1>About</h1>
+<p><strong>Put Content Some Content About YourSelf On This Page</strong></p>
 
     </article>
   </div>
