--- a/404.html
+++ b/404.html
@@ -5,30 +5,29 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Categories | My New Hugo Site</title>
-<meta name="title" content="Categories" />
+<title>404</title>
+<meta name="title" content="404 Page not found" />
 <meta name="description" content="" />
 <meta name="keywords" content="" />
 
 
-<meta property="og:title" content="Categories" />
+<meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://huangziji.github.io/categories/" />
+<meta property="og:url" content="https://huangziji.github.io/404.html" />
 
 
 
 
-<meta name="twitter:card" content="summary"/><meta name="twitter:title" content="Categories"/>
+<meta name="twitter:card" content="summary"/><meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content=""/>
 
 
 
-<meta itemprop="name" content="Categories">
+<meta itemprop="name" content="404 Page not found">
 <meta itemprop="description" content="">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
-  <link rel="alternate" type="application/rss+xml" href="https://huangziji.github.io/categories/index.xml" title="My New Hugo Site" />
   <style>
   body {
     font-family: Verdana, sans-serif;
@@ -215,23 +214,8 @@
 </nav>
 </header>
   <main>
-<content>
-  
-  <h3 style="margin-bottom:0">Filtering for "Categories"</h3>
-  <small>
-    <a href="/blog">Remove filter</a>
-  </small>
-  
-  <ul class="blog-posts">
-    
-    <li>
-      No posts yet
-    </li>
-    
-  </ul>
-  
-  
-</content>
+<h1>404</h1>
+<h2>ʕノ•ᴥ•ʔノ ︵ ┻━┻</h2>
 
   </main>
   <footer>Made with <a href="https://github.com/janraasch/hugo-bearblog/">Hugo ʕ•ᴥ•ʔ Bear</a>
